cloud-gke/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app
  labels:
    app: django-app
spec:
  type: LoadBalancer
  selector:
    app: django-app
  ports:
  - port: 80
    targetPort: 8080
